[package]
name = "taterboard"
version = "0.1.0"
authors = ["gamma-delta"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
itertools = "0.9.0"
anyhow = "^1.0"
log = "^0.4"
env_logger = "^0.8"

[dependencies.serenity]
version = "0.9.2"
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
]
