[package]
name = "taterboard"
version = "0.1.0"
authors = ["gamma-delta"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "^1"
itertools = "0.10"
anyhow = "1.0"
log = "0.4"
env_logger = "0.8"

[dependencies.serenity]
version = "0.10"
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "native_tls_backend",
    "unstable_discord_api",
]
